--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
 ﻿<head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z8X3DTHERY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Z8X3DTHERY');
+</script>
+
+   
 <style>
 </style>
 </head>
