--- a/education.html
+++ b/education.html
@@ -1,6 +1,6 @@
 ﻿<head>
 	 
-	 <!-- Global site tag (gtag.js) - Google Analytics -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z8X3DTHERY"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -20,7 +20,7 @@
 
 <!-- Main Page Button-->
 <form action="https://kiordanidou.github.io/">
-    <input type="submit" size="95" style="font-size:17px;cursor:pointer;height:40px; width:170px" value="Back to Main Page" />
+    <input type="submit" size="95" style="font-size:17px;cursor:pointer;height:40px; width:130px" value="Home" />
 </form>
 
 <body style='tab-interval:.5in'>
@@ -34,48 +34,18 @@
 	    Dr. Kalliopi Iordanidou, Ph.D.</span>
 	  <br>
 	  <span  style='font-size:18.0pt'>
-	    TRIUMF Research Associate – ATLAS Experiment
+	    Lead Data Scientist
 	</span></p>
 </div>
     <br><br><br>
     
 			    
-<!-- Positions  -->
-<b><u><span  style='font-size:13.0pt;text-decoration: underline'>Research Positions:</span></u></b><span style=''><o:p></o:p></span>
-<br>
-<br>
-<span  style='font-size:13.0pt'>
-  -&nbsp;&nbsp; <b>Research Associate</b> (2019 - present) 
-  <br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  TRIUMF, Vancouver, Canada 
-<br><br>
--&nbsp;&nbsp; <b>Postdoctoral Research Scientist</b> (2015 - 2019) 
-  <br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    Columbia University, New York, USA
-  <br><br>
-  -&nbsp;&nbsp;<b> Graduate Research Assistant</b> (2011 - 2015)
-  <br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  Brookhaven National Laboratory, Upton, USA
-  <br><br>
-  -&nbsp;&nbsp;<b>Summer Graduate Research Assistant </b> (2010)
-  <br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    Brookhaven National Laboratory, Upton, USA
-
-</span>
-<br><br><br>
-<br><br><br>
-
-
 <!-- Education  -->
 <b><u><span  style='font-size:13.0pt;text-decoration: underline'>Education:</span></u></b><span style=''><o:p></o:p></span>
 <br>
 <br>
 <span  style='font-size:13.0pt'>
-  -&nbsp;&nbsp; <b> Doctorate (Ph.D.), Physics</b> (2012-2015)
+  -&nbsp;&nbsp; <b> Doctorate (Ph.D.), Experimental Particle Physics</b> (2012-2015)
   <br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   University of Athens, Greece
@@ -84,7 +54,7 @@
   <u>Dissertation Title:</u> <i>"Study of the H→ZZ<sup>(</s\pan>*)</sup>→4ℓ Decay Channel and Contribution to the Forward Muon Detection with the ATLAS Experiment</i>
 <br><br>
 <span  style='font-size:13.0pt'>
-  -&nbsp;&nbsp; <b>Master of Science (M.Sc.), Physics</b> (2009-2011)
+  -&nbsp;&nbsp; <b>Master of Science (M.Sc.), Nuclear and Particle Physics</b> (2009-2011)
   <br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   University of Athens, Greece
