--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z8X3DTHERY"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -25,10 +26,8 @@
 <div align="center">    
       
 <!--Top Links -->
-<!-- TRIUMF -->
-<a href="http://www.triumf.ca" ><img src="https://www.triumf.ca/sites/default/files/user-1700/TRIUMF_Logo_Blue.jpg" width=240 height=45 /></a>
-&emsp;
-<a href="https://www.triumf.ca" ><img src="https://www.triumf.ca/sites/default/files/user-1700/Tagline_Positive_Blue.png" width=340 height=60 /></a>
+<!-- Accenture -->
+<a href="https://www.accenture.com/us-en" ><img src="https://sortlist.gumlet.com/sortlist-core-api/kafaPsviLYYStYeBaKUbBQ3m" width=240 height=45 /></a>
 &emsp;
 <!-- LinkedIn -->
 <a href="https://ch.linkedin.com/pub/kalliopi-iordanidou/41/70b/946">
@@ -41,37 +40,42 @@
 
 <a href="https://kiordanidou.github.io/photos/poppy.jpg"><img src="photos/poppy.jpg" width="370" height="292" /></a>
 
-<p style='text-align:center;font-size:32.0pt'>Dr. Kalliopi Iordanidou, Ph.D.</p>
-<p style='text-align:center'><span  style='font-size:18.0pt'>Lead Data Scientist<o:p></o:p></span></p>
-<p style='text-align:center'><span  style='font-size:18.0pt'>Research Associate – ATLAS Experiment<o:p></o:p></span></p>
+<p style='text-align:center;font-size:32.0pt'>Dr. Kalliopi Iordanidou</p>
+<p style='text-align:center'><span  style='font-size:25.0pt'>Lead Data Scientist<o:p></o:p></span></p>
+<p style='text-align:center'><span  style='font-size:25.0pt'>Ph.D. in Experiment Particle Physics<o:p></o:p></span></p>
     
   
 <!-- Links Block - Buttons -->
 <br>
 
-<!-- Experience & Education -->
-<form style="display:inline-block;" action="https://kiordanidou.github.io/shortCV.html">
-  <input type="submit" size="15" style="font-family:Trebuchet MS;cursor:pointer;font-size:18px;height:25px; width:207px;background-color:#99A3A4" value="Experience & Education" >
+<!-- Employment -->
+<form style="display:inline-block;" action="https://kiordanidou.github.io/employment.html">
+  <input type="submit" size="15" style="font-family:Trebuchet MS;cursor:pointer;font-size:18px;height:25px; width:160px;background-color:#99A3A4" value="Employment" >
+</form>
+
+<!-- Education -->
+<form style="display:inline-block;" action="https://kiordanidou.github.io/education.html">
+  <input type="submit" size="11" style="font-family:Trebuchet MS;cursor:pointer;font-size:18px;height:25px; width:160px;background-color:#99A3A4" value="Education" >
 </form>
 
 <!-- Publications -->
 <form style="display:inline-block;"  action="https://kiordanidou.github.io/publications.html">
-  <input type="submit" size="15" style="font-family:Trebuchet MS;cursor:pointer;font-size:18px;height:25px; width:207px;background-color:#99A3A4" value="Publications" />
+  <input type="submit" size="11" style="font-family:Trebuchet MS;cursor:pointer;font-size:18px;height:25px; width:160px;background-color:#99A3A4" value="Publications" />
 </form>
 
 <!-- Talks -->
 <form style="display:inline-block;" action="https://kiordanidou.github.io/talks.html">
-  <input type="submit" size="15" style="font-family:Trebuchet MS;cursor:pointer;font-size:18px;height:25px; width:207px;background-color:#99A3A4" value="Public Talks" />
+  <input type="submit" size="11" style="font-family:Trebuchet MS;cursor:pointer;font-size:18px;height:25px; width:160px;background-color:#99A3A4" value="Public Talks" />
 </form>
 
 <!-- Photos -->
 <form style="display:inline-block;" action="https://kiordanidou.github.io/photos.html">
-  <input type="submit" size="15" style="font-family:Trebuchet MS;cursor:pointer;font-size:18px;height:25px; width:207px;background-color:#99A3A4" value="Photos" />
+  <input type="submit" size="11" style="font-family:Trebuchet MS;cursor:pointer;font-size:18px;height:25px; width:160px;background-color:#99A3A4" value="Photos" />
 </form>
 
 <!-- Contact -->
 <form style="display:inline-block;" action="https://kiordanidou.github.io/contact.html">
-  <input type="submit" size="15" style="font-family:Trebuchet MS;cursor:pointer;font-size:18px;height:25px; width:207px;background-color:#99A3A4" value="Contact" />
+  <input type="submit" size="11" style="font-family:Trebuchet MS;cursor:pointer;font-size:18px;height:25px; width:160px;background-color:#99A3A4" value="Contact" />
 </form>
 
 <br><br><br><br>
