--- a/photos.html
+++ b/photos.html
@@ -18,7 +18,7 @@
 
 <!-- Main Page Button-->
 <form action="https://kiordanidou.github.io">
-    <input type="submit" size="95" style="font-size:17px;cursor:pointer;height:40px; width:170px" value="Back to Main Page" />
+    <input type="submit" size="95" style="font-size:17px;cursor:pointer;height:40px; width:130px" value="Home" />
 </form>
 
 <br>
@@ -35,7 +35,7 @@
       Dr. Kalliopi Iordanidou, Ph.D.</span>
     <br>
     <span  style='font-size:18.0pt'>
-      TRIUMF Research Associate – ATLAS Experiment
+      Lead Data Scientist
   </span></p>
   <br><br><br>
 
@@ -86,7 +86,7 @@
 
 <!--XQCD -->
 <a href="https://kiordanidou.github.io/photos/xqcd.jpg" ><img src="photos/xqcd.jpg" width="320" height="202" alt="Excited QCD Conference Photo" title="Excited QCD Conference Photo" /></a>
-<figcaption align=center '>Excited QCD Conference Photo</figcaption>
+<figcaption align=center '>Excited QCD 2013 Conference</figcaption>
 
 
 <br><br><br><br>
@@ -102,9 +102,10 @@
 
 </div>
 
+
 <!-- Button to go back -->
 <form action="https://kiordanidou.github.io">
-    <input type="submit" size="95" style="font-size:17px;cursor:pointer;height:40px; width:170px" value="Back to Main Page" />
+    <input type="submit" size="95" style="font-size:17px;cursor:pointer;height:40px; width:130px" value="Home" />
 </form>
 <br><br><br>
 
