--- a/talks.html
+++ b/talks.html
@@ -1,6 +1,6 @@
 ﻿<head>
 	 
-	 <!-- Global site tag (gtag.js) - Google Analytics -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z8X3DTHERY"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -19,7 +19,7 @@
 
 <!-- Main Page Button-->
 <form action="https://kiordanidou.github.io">
-    <input type="submit" size="95" style="font-size:17px;cursor:pointer;height:40px; width:170px" value="Back to Main Page" />
+    <input type="submit" size="95" style="font-size:17px;cursor:pointer;height:40px; width:130px" value="Home" />
 </form>
 
 <body style='tab-interval:.5in'>
@@ -33,7 +33,7 @@
 	    Dr. Kalliopi Iordanidou, Ph.D.</span>
 	  <br>
 	  <span  style='font-size:18.0pt'>
-	    TRIUMF Research Associate – ATLAS Experiment
+	    Lead Data Scientist
 	</span></p>
 	<a href="https://kiordanidou.github.io/photos/poppy2.jpg"><img src="photos/poppy2.jpg" width="500" height="320" /></a>      
 </div>
@@ -146,7 +146,7 @@
 <form action="https://kiordanidou.github.io">
 
 <form action="https://kiordanidou.github.io">
-    <input type="submit" size="95" style="font-size:17px;cursor:pointer;height:40px; width:170px" value="Back to Main Page" />
+    <input type="submit" size="95" style="font-size:17px;cursor:pointer;height:40px; width:130px" value="Home" />
 </form>
 <br><br><br>
 
