--- a/publications.html
+++ b/publications.html
@@ -19,7 +19,7 @@
 
 <!-- Main Page Button -->
 <form action="https://kiordanidou.github.io">
-    <input type="submit" size="95" style="font-size:17px;cursor:pointer;height:40px; width:170px" value="Back to Main Page" />
+    <input type="submit" size="95" style="font-size:17px;cursor:pointer;height:40px; width:130px" value="Home" />
 </form>
 
 
@@ -174,7 +174,7 @@
 </span>
 
   <form action="https://kiordanidou.github.io">
-  <input type="submit" size="95" style="font-size:17px;cursor:pointer;height:40px; width:170px" value="Back to Main Page" />
+  <input type="submit" size="95" style="font-size:17px;cursor:pointer;height:40px; width:130px" value="Home" />
 </form>
 
 <br>
