--- a/publications.html
+++ b/publications.html
@@ -150,10 +150,15 @@
 -&nbsp;&nbsp;K. Iordanidou, “ATLAS Searches for VV/Vγ Resonances,” PoS(EPS- HEP2017)291, <a href="https://doi.org/10.22323/1.314.0291" > https://doi.org/10.22323/1.314.0291</a>.  
 <br><br>
 
--&nbsp;&nbsp;W. Adam, J. Pradler, J. Schieck, C. Schwanda, W. Waltenberger, A. Celis, A. Crivellin, C. V. Welke, C. Kiesling, C. Niehoff, D. Salerno, D. Straub, E. Molinaro, E. J. Chun, F. Kahlhoefer, F. Sannino, J. List, J. F. Kamenik, K. Iordanidou, K. Howe, L. Li Gioi, M. Jeitler, M. Schumann, M. Flechl, M. Brodski, M. Duerr, M. B. Kiani, N. Vignaroli, N. Venturi, P. Stangl, S. Sekmen, S. Wehle, S. Kulkarni, T. Berger-Hryn'ova, T. Plehn, T. Gershon, Z. Zinonos, "LHCSki 2016 - A First Discussion of 13 TeV Results", <a href="https://inspirehep.net/record/1473827" >arXiv:1607.01212 [hep-ph]</a>.
+-&nbsp;&nbsp;K. Iordanidou et al.,
+<!--
+W. Adam, J. Pradler, J. Schieck, C. Schwanda, W. Waltenberger, A. Celis, A. Crivellin, C. V. Welke, C. Kiesling, C. Niehoff, D. Salerno, D. Straub, E. Molinaro, E. J. Chun, F. Kahlhoefer, F. Sannino, J. List, J. F. Kamenik, K. Iordanidou, K. Howe, L. Li Gioi, M. Jeitler, M. Schumann, M. Flechl, M. Brodski, M. Duerr, M. B. Kiani, N. Vignaroli, N. Venturi, P. Stangl, S. Sekmen, S. Wehle, S. Kulkarni, T. Berger-Hryn'ova, T. Plehn, T. Gershon, Z. Zinonos, -->
+"LHCSki 2016 - A First Discussion of 13 TeV Results", <a href="https://inspirehep.net/record/1473827" >arXiv:1607.01212 [hep-ph]</a>.
 <br><br>
 
--&nbsp;&nbsp;R. Bartoldus, R. Claus, N. Garelli, R.T. Herbst, M. Huffer, G. Iakovidis, K. Iordanidou, K. Kwan, M. Kocian, A.J. Lankford, P. Moschovakos, A. Nelson, K. Ntekas, L. Ruckman, J. Russell, M. Schernau, S. Schlenker, D. Su, C. Valderanis, M. Wittgen, and S.C. Yildiz, “A new ATLAS muon CSC readout system with system on chip technology on ATCA platform,” <a href="https://inspirehep.net/record/1418398" >JINST 11, no. 01, C01059 (2016). doi:10.1088/1748-0221/11/01/C01059</a>.
+-&nbsp;&nbsp;K. Iordanidou et al., 
+<!-- R. Bartoldus, R. Claus, N. Garelli, R.T. Herbst, M. Huffer, G. Iakovidis, K. Iordanidou, K. Kwan, M. Kocian, A.J. Lankford, P. Moschovakos, A. Nelson, K. Ntekas, L. Ruckman, J. Russell, M. Schernau, S. Schlenker, D. Su, C. Valderanis, M. Wittgen, and S.C. Yildiz, -->
+“A new ATLAS muon CSC readout system with system on chip technology on ATCA platform,” <a href="https://inspirehep.net/record/1418398" >JINST 11, no. 01, C01059 (2016). doi:10.1088/1748-0221/11/01/C01059</a>.
 <br><br>
 
 -&nbsp;&nbsp;K. Iordanidou, “Higgs Discovery Status from ATLAS,” <a href="https://inspirehep.net/record/1307352" >Acta Phys. Polon. Supp. 7, no. 3, 639 (2014).doi:10.5506 / APhysPolBSupp.7.639</a>.
