--- a/publications.html
+++ b/publications.html
@@ -34,7 +34,7 @@
       Dr. Kalliopi Iordanidou, Ph.D.</span>
     <br>
     <span  style='font-size:18.0pt'>
-      TRIUMF Research Associate – ATLAS Experiment
+      Lead Data Scientist
   </span></p>
   <a href="https://kiordanidou.github.io/photos/poppy3.jpg"><img src="photos/poppy3.jpg" width="490" height="320" ></a>
 </div>
