--- a/education.html
+++ b/education.html
@@ -41,11 +41,16 @@
     
 			    
 <!-- Education  -->
-<b><u><span  style='font-size:13.0pt;text-decoration: underline'>Education:</span></u></b><span style=''><o:p></o:p></span>
-<br>
-<br>
-<span  style='font-size:13.0pt'>
-  -&nbsp;&nbsp; <b> Doctorate (Ph.D.), Experimental Particle Physics</b> (2012-2015)
+<p>
+  <img src="photos/phd.png" style="float: right; border: 1px solid #ddd; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);"/>
+
+<!--      <a href="https://kiordanidou.github.io/photos/phd.jpg"><img src="photos/phd.jpg" width="370" height="292" /></a> -->
+
+    <b><u><span  style='font-size:13.0pt;text-decoration: underline'>Education:</span></u></b><span style=''><o:p></o:p></span>
+    <br>
+    <br>
+    <span  style='font-size:13.0pt'>
+      -&nbsp;&nbsp; <b> Doctorate (Ph.D.), Experimental Particle Physics</b> (2012-2015)
   <br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   University of Athens, Greece
@@ -65,6 +70,12 @@
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   University of Athens, Greece
 <br><br>
+
+
+  </p>
+
+
+</div>
 
 
 </div>
