--- a/education.html
+++ b/education.html
@@ -41,44 +41,36 @@
     
 			    
 <!-- Education  -->
-<p>
-  <img src="photos/phd.png" style="float: right; border: 1px solid #ddd; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);"/>
+<b><u><span  style='font-size:13.0pt;text-decoration: underline'>Education:</span></u></b><span style=''><o:p></o:p></span>
+<br>
+<br>
+<span  style='font-size:13.0pt'>
 
-<!--      <a href="https://kiordanidou.github.io/photos/phd.jpg"><img src="photos/phd.jpg" width="370" height="292" /></a> -->
-
-    <b><u><span  style='font-size:13.0pt;text-decoration: underline'>Education:</span></u></b><span style=''><o:p></o:p></span>
-    <br>
-    <br>
-    <span  style='font-size:13.0pt'>
-      -&nbsp;&nbsp; <b> Doctorate (Ph.D.), Experimental Particle Physics</b> (2012-2015)
+  -&nbsp;&nbsp; <b> Doctorate (Ph.D.), Experimental Particle Physics</b> (2012-2015)
   <br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   University of Athens, Greece
-  <br>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <u>Dissertation Title:</u> <i>"Study of the H→ZZ<sup>(</s\pan>*)</sup>→4ℓ Decay Channel and Contribution to the Forward Muon Detection with the ATLAS Experiment</i>
-<br><br>
-<span  style='font-size:13.0pt'>
+  <br><br>
+
   -&nbsp;&nbsp; <b>Master of Science (M.Sc.), Nuclear and Particle Physics</b> (2009-2011)
   <br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   University of Athens, Greece
-<br><br>
-<span  style='font-size:13.0pt'>
+  <br><br>
+
   -&nbsp;&nbsp; <b>Bachelor of Science (B.Sc.), Physics</b> (2005-2009)
   <br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   University of Athens, Greece
-<br><br>
+  <br><br>
+  <br><br>
 
-
-  </p>
-
-
-</div>
-
-
-</div>
+  <div align="center">
+    <img src="photos/phd.png" style="float: center; border: 1px solid #ddd; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);"/>
+  </div>
+  
+  
+  </div>
 </body>
 
 </html>
