--- a/education.html
+++ b/education.html
@@ -66,7 +66,7 @@
   <br><br>
 
   <div align="center">
-    <img src="photos/phd.png" style="float: center; border: 1px solid #ddd; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);"/>
+    <a href="http://inspirehep.net/record/1382014/"><img src="photos/phd.png" style="float: center; border: 1px solid #ddd; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);"/></a>
   </div>
   
   
