--- a/photos.html
+++ b/photos.html
@@ -44,7 +44,7 @@
 <div id="container">
 
  <!-- 2019 Conferences -->
-  <a href="https://kiordanidou.github.io/photos/photos/Kvq9oBoK.jpeg"><img src="photos/Kvq9oBoK.jpeg" width="400" height="252" alt="BOOST Conference 2019"/></a>     
+  <a href="https://kiordanidou.github.io/photos/Kvq9oBoK.jpeg"><img src="photos/Kvq9oBoK.jpeg" width="400" height="252" alt="BOOST Conference 2019"/></a>     
   <a href="https://kiordanidou.github.io/photos/RPM-LHCP2019-5500.JPG"><img src="photos/RPM-LHCP2019-5500.JPG" width="320" height="252" alt="LHCp Conference 2019"/></a>     
   <figcaption>BOOST (MIT, USA) and LHCp (Puebla, Mexico) Conferences in 2019</figcaption>
 
