--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <p style='text-align:center;font-size:32.0pt'>Dr. Kalliopi Iordanidou</p>
 <p style='text-align:center'><span  style='font-size:25.0pt'>Lead Data Scientist<o:p></o:p></span></p>
-<p style='text-align:center'><span  style='font-size:25.0pt'>Ph.D. in Experiment Particle Physics<o:p></o:p></span></p>
+<p style='text-align:center'><span  style='font-size:25.0pt'>Ph.D. in Experimental Particle Physics<o:p></o:p></span></p>
     
   
 <!-- Links Block - Buttons -->
