--- a/publications.html
+++ b/publications.html
@@ -170,7 +170,7 @@ W. Adam, J. Pradler, J. Schieck, C. Schwanda, W. Waltenberger, A. Celis, A. Criv
 <br>
 <p><b><u>Ph.D. Thesis:</u></b></p>
 
--&nbsp;&nbsp;Kalliopi Iordanidou, "Study of the H→ZZ<sup>(</s\pan>*)</sup>→4ℓ Decay Channel and Contribution to the Forward Muon Detection with the ATLAS Experiment", <a href="http://inspirehep.net/record/1382014/" >CERN-THESIS-2015-002</a>.
+-&nbsp;&nbsp;K. Iordanidou, "Study of the H→ZZ<sup>(</s\pan>*)</sup>→4ℓ Decay Channel and Contribution to the Forward Muon Detection with the ATLAS Experiment", <a href="http://inspirehep.net/record/1382014/" >CERN-THESIS-2015-002</a>.
 <br><br><br><br>
 
 
