--- a/talks.html
+++ b/talks.html
@@ -112,7 +112,7 @@
 <span  style='font-size:13.0pt'>
   -&nbsp;&nbsp;VV &rarr; JJ Outlook, Exotics-HDBS Workshop, Naples, Italy, June 11-14, 2019
    <br><br>
-  -&nbsp;&nbsp;XH Resonant Searches Status, DBL-HBSM Workshop, Annecy, November 13-16,2017
+  -&nbsp;&nbsp;XH Resonant Searches Status, DBL-HBSM Workshop, Annecy, November 13-16, 2017
   <br><br>
 -&nbsp;&nbsp;Searches for New Resonant Topologies, ATLAS SUSY/Exotics Workshop 2017, Bucharest, May 8-12, 2017
 <br><br>
