--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class=WordSection1>
     <p align=center style='text-align:center'>
      
-      <meta name="description" content="TRIUMF Research Associate, Vancouver, Canada">
+      <meta name="description" content="Lead Data Scientist">
       <meta name="keywords" content="Kalliopi Iordanidou" >
       <meta name="author" content="Kalliopi Iordanidou" >
 
@@ -37,7 +37,7 @@
 
 <br><br><br>
 
-<p style='text-align:center'><span  style='font-size:25.0pt'>Lead Data Scientist - Ph.D. in Experimental Particle Physics<o:p></o:p></span></p>
+<p style='text-align:center;font-style:italic;font-size:25.0pt;color:teal'>Lead Data Scientist - Ph.D. in Experimental Particle Physics<o:p></o:p></p>
 
 <!-- Links Block - Buttons -->
 <br>
