--- a/employment.html
+++ b/employment.html
@@ -33,7 +33,7 @@
 	  <span style='font-size:32.0pt'>
 	    Dr. Kalliopi Iordanidou, Ph.D.</span>
 	  <br>
-	  <span  style='font-size:18.0pt'>
+	  <span  style='font-size:24.0pt;font-style:italic;color:teal'>
 	    Lead Data Scientist
 	</span></p>
 </div>
