--- a/photos.html
+++ b/photos.html
@@ -34,7 +34,7 @@
     <span style='font-size:32.0pt'>
       Dr. Kalliopi Iordanidou, Ph.D.</span>
     <br>
-    <span  style='font-size:18.0pt'>
+    <span  style='font-size:24.0pt;font-style:italic;color:teal'>
       Lead Data Scientist
   </span></p>
   <br><br><br>
