--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,7 @@
     <span style='font-size:32.0pt'>
       Dr. Kalliopi Iordanidou, Ph.D.</span>
     <br>
-    <span  style='font-size:18.0pt'>
+    <span  style='font-size:24.0pt;font-style:italic;color:teal'>
       Lead Data Scientist
   </span></p>
   <a href="https://kiordanidou.github.io/photos/poppy3.jpg"><img src="photos/poppy3.jpg" width="490" height="320" ></a>
