--- a/talks.html
+++ b/talks.html
@@ -32,7 +32,7 @@
 	  <span style='font-size:32.0pt'>
 	    Dr. Kalliopi Iordanidou, Ph.D.</span>
 	  <br>
-	  <span  style='font-size:18.0pt'>
+	  <span  style='font-size:24.0pt;font-style:italic;color:teal'>
 	    Lead Data Scientist
 	</span></p>
 	<a href="https://kiordanidou.github.io/photos/poppy2.jpg"><img src="photos/poppy2.jpg" width="500" height="320" /></a>      
