--- a/publications.html
+++ b/publications.html
@@ -52,10 +52,10 @@
 
   <!-- Papers -->
   <p><b><u>Selected Papers:</u></b></p>
-  -&nbsp;&nbsp;ATLAS Collaboration, “Search for the $HH \rightarrow b \bar{b} b \bar{b}$ process via vector-boson fusion production using proton-proton collisions at $\sqrt{s} = 13$ TeV with the ATLAS detector", <a href="https://inspirehep.net/literature/1775750">arXiv:2001.05178 [hep-ex]</a>.
+  -&nbsp;&nbsp;ATLAS Collaboration, “Search for the HH→bbˉbbˉ process via vector-boson fusion production using proton-proton collisions at  √s = 13 TeV with the ATLAS detector", <a href="https://inspirehep.net/literature/1775750">arXiv:2001.05178 [hep-ex]</a>.
       <br><br>
 
-      -&nbsp;&nbsp;ATLAS Collaboration, “Search for diboson resonances in hadronic final states in 139 fb$^{-1}$ of $pp$ collisions at $\sqrt{s} = 13$ TeV with the ATLAS detector", JHEP 09 (2019) 091 <a href="https://inspirehep.net/literature/1740685"> arXiv:1906.08589 [hep-ex]</a> 
+      -&nbsp;&nbsp;ATLAS Collaboration, “Search for diboson resonances in hadronic final states in 139  fb<sup>-1</sup> of pp collisions at  √s = 13 TeV with the ATLAS detector", JHEP 09 (2019) 091 <a href="https://inspirehep.net/literature/1740685"> arXiv:1906.08589 [hep-ex]</a> 
     <br><br>
   
   -&nbsp;&nbsp;ATLAS Collaboration, “Combination of searches for heavy resonances decaying into bosonic and leptonic final states using 36 fb<sup>-1</sup> of proton-proton collision data at √s = 13 TeV with the ATLAS detector,” Phys. Rev. D 98 (2018) 052008 doi:10.1103/PhysRevD.98.052008 <a href="https://arxiv.org/abs/1808.02380">arXiv:1808.02380 [hep-ex]</a>.
