--- a/talks.html
+++ b/talks.html
@@ -78,7 +78,7 @@
 <br>
 <span  style='font-size:13.0pt'>
 -&nbsp;&nbsp; First ATLAS Search Results with 140 fb<sup>-1</sup>, CERN-LHC Seminar on behalf of the ATLAS Collaboration, March 19, 2019
-<iframe width="640" height="360" frameborder="0" src="https://cds.cern.ch/record/2668510" allowfullscreen></iframe>
+<iframe src="https://mediastream.cern.ch/MediaArchive/Video/Public2/weblecture-player/index.html?year=2019&lecture=779304" width="1020px" height="600px" allowfullscreen scrolling="no" frameborder="0"></iframe>
 <br><br>
 -&nbsp;&nbsp;Probing Physics Beyond the Standard Model with Bosons, Indiana University, January 25, 2018
 <br><br>
