--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    
 <style>
 </style>
+   <script data-ad-client="ca-pub-9566635558145048" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body style='tab-interval:.5in'>
