--- a/education.html
+++ b/education.html
@@ -15,7 +15,7 @@
 </style>
 </head>
 
-<title>Talks: Dr. Kalliopi Iordanidou</title>
+<title>Talks: Kalliopi Iordanidou, Ph.D.</title>
 
 
 <!-- Main Page Button-->
@@ -31,7 +31,7 @@
       <div align="center">
 	<p>
 	  <span style='font-size:32.0pt'>
-	    Dr. Kalliopi Iordanidou, Ph.D.</span>
+	    Kalliopi Iordanidou, Ph.D.</span>
 	  <br>
 	  <span  style='font-size:24.0pt;font-style:italic;color:teal'>
 	    Lead Data Scientist
