--- a/photos.html
+++ b/photos.html
@@ -14,7 +14,7 @@
 </style>
 </head>
 
-<title>Photos: Dr. Kalliopi Iordanidou</title>
+<title>Photos: Kalliopi Iordanidou, Ph.D.</title>
 
 <!-- Main Page Button-->
 <form action="https://kiordanidou.github.io">
@@ -32,7 +32,7 @@
 <div align="center">
   <p>
     <span style='font-size:32.0pt'>
-      Dr. Kalliopi Iordanidou, Ph.D.</span>
+      Kalliopi Iordanidou, Ph.D.</span>
     <br>
     <span  style='font-size:24.0pt;font-style:italic;color:teal'>
       Lead Data Scientist
