--- a/talks.html
+++ b/talks.html
@@ -14,7 +14,7 @@
 </style>
 </head>
 
-<title>Talks: Dr. Kalliopi Iordanidou</title>
+<title>Talks: Kalliopi Iordanidou, Ph.D.</title>
 
 
 <!-- Main Page Button-->
