--- a/employment.html
+++ b/employment.html
@@ -46,7 +46,7 @@
 <br>
 <span  style='font-size:13.0pt'>
   
-  -&nbsp;&nbsp; <b>Senior Data Analyst</b> (2019 - present) 
+  -&nbsp;&nbsp; <b>Senior Data Scientist</b> (2019 - present) 
   <br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   Digital group
