--- a/publications.html
+++ b/publications.html
@@ -104,6 +104,11 @@
     <br>
 
 
+ <!-- TDR -->
+  <p><b><u>Technical Design Report:</u></b></p>
+  -&nbsp;&nbsp;ATLAS Collaboration, “Technical Design Report for the Phase-II Upgrade of the ATLAS LAr Calorimeter”, <a href="http://cds.cern.ch/record/2285582">CERN-LHCC-2017-018</a>.
+  <br><br>  <br><br>
+    
 <!-- Conference Notes-->
 <p><b><u>Selected Conference Notes:</u></b></p>
 
