--- a/publications.html
+++ b/publications.html
@@ -105,7 +105,7 @@
 
 
  <!-- TDR -->
-  <p><b><u>Technical Design Report:</u></b></p>
+  <p><b><u>Technical Design Reports:</u></b></p>
   -&nbsp;&nbsp;ATLAS Collaboration, “Technical Design Report for the Phase-II Upgrade of the ATLAS LAr Calorimeter”, <a href="http://cds.cern.ch/record/2285582">CERN-LHCC-2017-018</a>.
   <br><br>
   -&nbsp;&nbsp;ATLAS Collaboration, “Technical Design Report for the Phase-I Upgrade of the ATLAS TDAQ System”, <a href="http://cds.cern.ch/record/1602235">CERN-LHCC-2013-018</a>.
