--- a/publications.html
+++ b/publications.html
@@ -42,16 +42,24 @@
 
 <br><br><br>
 
-<!--Complete List of Publications -->
-<form action="https://kiordanidou.github.io/allpublications.html">
-    <input type="submit" size="15" style="font-size:17px;cursor:pointer;height:40px;width:220px;size=250;background-color:#99A3A4;text-shadow: 0 2.5px 2.5px #000;" value="Complete Publication List" />
-</form>
+
+<!-- Table of Contents -->
+<a href="https://kiordanidou.github.io/allpublications.html">Complete Publication List</a>
 <br>
-
-<span  style='font-size:13.0pt'>
-
-  <!-- Papers -->
-  <p><b><u>Selected Papers:</u></b></p>
+<a href="#papers">Selected Papers</a>
+<br>
+<a href="#tdr">Technical Design Reports</a>
+<br>
+<a href="#conf">Selected Conference Notes</a> 
+<br>
+<a href="#proc">Proceedings</a> 
+<br>
+<a href="#thesis">Ph.D. Thesis</a> 
+<br><br><br><br>
+  
+<!-- Papers -->
+<h2 id="papers"><b><u>Selected Papers:</u></b></h2>
+  
   -&nbsp;&nbsp;ATLAS Collaboration, “Search for the HH→bbˉbbˉ process via vector-boson fusion production using proton-proton collisions at  √s = 13 TeV with the ATLAS detector", <a href="https://inspirehep.net/literature/1775750">arXiv:2001.05178 [hep-ex]</a>.
       <br><br>
 
@@ -105,14 +113,15 @@
 
 
  <!-- TDR -->
-  <p><b><u>Technical Design Reports:</u></b></p>
+<h2 id="tdr"><b><u>Technical Design Reports:</u></b></h2>
+
   -&nbsp;&nbsp;ATLAS Collaboration, “Technical Design Report for the Phase-II Upgrade of the ATLAS LAr Calorimeter”, <a href="http://cds.cern.ch/record/2285582">CERN-LHCC-2017-018</a>.
   <br><br>
   -&nbsp;&nbsp;ATLAS Collaboration, “Technical Design Report for the Phase-I Upgrade of the ATLAS TDAQ System”, <a href="http://cds.cern.ch/record/1602235">CERN-LHCC-2013-018</a>.
   <br><br>  <br><br>
     
 <!-- Conference Notes-->
-<p><b><u>Selected Conference Notes:</u></b></p>
+<h2 id="conf"><b><u>Selected Conference Notes:</u></b></h2>
 
 -&nbsp;&nbsp;ATLAS collaboration, “Search for the HH→bb¯bb¯ process via vector boson fusion production using proton-proton collisions at √s = 13 TeV with the ATLAS detector,” <a href="https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/CONFNOTES/ATLAS-CONF-2019-030/" >ATLAS-CONF-2019-030</a>.
   <br><br>
@@ -153,35 +162,29 @@
 -&nbsp;&nbsp;ATLAS Collaboration, “Measurements of the properties of the Higgs-like boson in the four lepton decay channel with the ATLAS detector using 25 fb<sup>-1</sup> of proton-proton collision data,” <a href="https://inspirehep.net/record/1229969" >ATLAS-CONF-2013-013</a>.
 <br>
 <br>
-<br>
+<br><br>
 
 
 <!-- Proceedings -->
-<br>
-<p><b><u>Proceedings:</u></b></p>
+<h2 id="proc"><b><u>Proceedings:</u></b></h2>
+
 
 -&nbsp;&nbsp;K. Iordanidou, “ATLAS Searches for VV/Vγ Resonances,” PoS(EPS- HEP2017)291, <a href="https://doi.org/10.22323/1.314.0291" > https://doi.org/10.22323/1.314.0291</a>.  
 <br><br>
 
--&nbsp;&nbsp;K. Iordanidou et al.,
-<!--
-W. Adam, J. Pradler, J. Schieck, C. Schwanda, W. Waltenberger, A. Celis, A. Crivellin, C. V. Welke, C. Kiesling, C. Niehoff, D. Salerno, D. Straub, E. Molinaro, E. J. Chun, F. Kahlhoefer, F. Sannino, J. List, J. F. Kamenik, K. Iordanidou, K. Howe, L. Li Gioi, M. Jeitler, M. Schumann, M. Flechl, M. Brodski, M. Duerr, M. B. Kiani, N. Vignaroli, N. Venturi, P. Stangl, S. Sekmen, S. Wehle, S. Kulkarni, T. Berger-Hryn'ova, T. Plehn, T. Gershon, Z. Zinonos, -->
-"LHCSki 2016 - A First Discussion of 13 TeV Results", <a href="https://inspirehep.net/record/1473827" >arXiv:1607.01212 [hep-ph]</a>.
+-&nbsp;&nbsp;K. Iordanidou et al., "LHCSki 2016 - A First Discussion of 13 TeV Results", <a href="https://inspirehep.net/record/1473827" >arXiv:1607.01212 [hep-ph]</a>.
 <br><br>
 
--&nbsp;&nbsp;K. Iordanidou et al., 
-<!-- R. Bartoldus, R. Claus, N. Garelli, R.T. Herbst, M. Huffer, G. Iakovidis, K. Iordanidou, K. Kwan, M. Kocian, A.J. Lankford, P. Moschovakos, A. Nelson, K. Ntekas, L. Ruckman, J. Russell, M. Schernau, S. Schlenker, D. Su, C. Valderanis, M. Wittgen, and S.C. Yildiz, -->
-“A new ATLAS muon CSC readout system with system on chip technology on ATCA platform,” <a href="https://inspirehep.net/record/1418398" >JINST 11, no. 01, C01059 (2016). doi:10.1088/1748-0221/11/01/C01059</a>.
+-&nbsp;&nbsp;K. Iordanidou et al., “A new ATLAS muon CSC readout system with system on chip technology on ATCA platform,” <a href="https://inspirehep.net/record/1418398" >JINST 11, no. 01, C01059 (2016). doi:10.1088/1748-0221/11/01/C01059</a>.
 <br><br>
 
 -&nbsp;&nbsp;K. Iordanidou, “Higgs Discovery Status from ATLAS,” <a href="https://inspirehep.net/record/1307352" >Acta Phys. Polon. Supp. 7, no. 3, 639 (2014).doi:10.5506 / APhysPolBSupp.7.639</a>.
 
-<br><br>
+<br><br><br><br>
 
 
 <!-- PhD Thesis -->
-<br>
-<p><b><u>Ph.D. Thesis:</u></b></p>
+<h2 id="thesis"><b><u>Ph.D. Thesis:</u></b></h2>
 
 -&nbsp;&nbsp;K. Iordanidou, "Study of the H→ZZ<sup>(</s\pan>*)</sup>→4ℓ Decay Channel and Contribution to the Forward Muon Detection with the ATLAS Experiment", <a href="http://inspirehep.net/record/1382014/" >CERN-THESIS-2015-002</a>.
 <br><br><br>
