--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ﻿<head>
 
+  <?php include ('log-ip.php') ?>
+
+  
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z8X3DTHERY"></script>
 <script>
