--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <p style='text-align:center;font-size:36.0pt'>Kalliopi Iordanidou, Ph.D.</p>
 
 <!-- Accenture -->
-<a href="https://www.accenture.com/us-en" ><img src="https://www.accenture.com/t20180820T080700Z__w__/gb-en/_acnmedia/Accenture/Dev/Redesign/Acc_Logo_Black_Purple_RGB.png" width=240 height=45 /></a>
+<a href="https://www.accenture.com/us-en" ><img src="https://www.accenture.com/t20180820T080700Z__w__/gb-en/_acnmedia/Accenture/Dev/Redesign/Acc_Logo_Black_Purple_RGB.png" width=238 height=45 /></a>
 
 <br><br><br>
 
@@ -79,7 +79,7 @@
 
 <!-- LinkedIn -->
 <a href="https://ch.linkedin.com/pub/kalliopi-iordanidou/41/70b/946">
-  <img src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg" width="30" height="30"  ></a>
+  <img src="https://content.linkedin.com/content/dam/me/brand/en-us/brand-home/logos/01-dsk-e8-v2.png.original.png" width="75" height="30"  ></a>
 
 <!-- Skype -->
 <a href="skype:k.iordanidou?chat"><img src="https://cdn4.iconfinder.com/data/icons/free-colorful-icons/360/skype.png" width="30" height="30"  ></a>
