--- a/education.html
+++ b/education.html
@@ -79,7 +79,7 @@
 
 <!-- LinkedIn -->
 <a href="https://ch.linkedin.com/pub/kalliopi-iordanidou/41/70b/946">
-  <img src="https://content.linkedin.com/content/dam/me/brand/en-us/brand-home/logos/01-dsk-e8-v2.png.original.png" width="75" height="30"  ></a>
+  <img src="https://kiordanidou.github.io/photos/linkedin-logo.png" width="75" height="30"  ></a>
 
 
 <!-- Skype -->
