--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
   <input type="submit" size="15" style="font-family:Trebuchet MS;cursor:pointer;font-size:18px;height:25px; width:160px;background-color:#99A3A4" value="Employment" >
 </form>
 
-<!-- Education -->
+<!-- Education 
 <form style="display:inline-block;" action="https://kiordanidou.github.io/education.html">
   <input type="submit" size="11" style="font-family:Trebuchet MS;cursor:pointer;font-size:18px;height:25px; width:160px;background-color:#99A3A4" value="Education" >
 </form>
-
+-->
+  
 <!-- Publications -->
 <form style="display:inline-block;"  action="https://kiordanidou.github.io/publications.html">
   <input type="submit" size="11" style="font-family:Trebuchet MS;cursor:pointer;font-size:18px;height:25px; width:160px;background-color:#99A3A4" value="Publications" />
